--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,13 @@
   height: 100px;
   background-color: red;
   position: absolute;
+  padding-top: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  border-color: green;
+  border-style: solid;
+  color: blue;
+  border-width: 10px;
 }
 
 .second-box-container {
@@ -10,7 +17,14 @@
   height: 100px;
   background-color: yellow;
   left: 250px;
+  text-align: center;
+  text-transform: uppercase;
   position: absolute;
+  padding-top: 20px;
+  border-color: red;
+  border-style: solid;
+  color: blue;
+  border-width: 10px;
 }
 
 .third-box-container {
@@ -18,5 +32,12 @@
   height: 100px;
   background-color: green;
   position: absolute;
-  left : 500px
+  padding-top: 20px;
+  left : 500px;
+  text-align: center;
+  text-transform: uppercase;
+  border-color: yellow;
+  border-style: solid;
+  color: blue;
+  border-width: 10px;
 }
